--- a/.env
+++ b/.env
@@ -4,14 +4,21 @@ PORT=7000
 # DB_HOST=127.0.0.1
 # DB_USER=root
 # DB_PASS='Siddhi@2000'
-# DB_NAME=Lamp_Fault
+# DB_NAME=Local
 # DB_DIALECT=mysql
 # DB_PORT=3306
 
-DB_HOST=165.232.177.23
-DB_USER=vendcom_copy
-DB_PASS='ukbd@220787M'
-DB_NAME=vendcom
+# DB_HOST=165.232.177.23
+# DB_USER=vendcom_copy
+# DB_PASS='ukbd@220787M'
+# DB_NAME=Local
+# DB_DIALECT=mysql
+# DB_PORT=3306
+
+DB_HOST=127.0.0.1
+DB_USER=gvc
+DB_PASS='gvc'
+DB_NAME=SixVideo
 DB_DIALECT=mysql
 DB_PORT=3306
 
